<?xml version="1.0" encoding="utf-8"?>
<resources>
 	<!-- from Main Activity -->
    <string name="app_name">Learn By Heart</string>
    <string name="toast_main_activity_no_dictionaries">Please create your first dictionary</string>
    <string name="btnOpenActivityTerms">Terms</string>
    <string name="btnOpenActivityDictionaries">Dictionaries</string>
    <string name="btnOpenActivityAlarms">Reminder</string>
    <string name="btnFeedback">Feedback</string>
    <string name="send_feedback_fail">There are no email clients installed.</string>
<!--     <string name="en_btnOpenActivityAccounts">Account</string> -->
<!--     <string name="en_btnOpenActivityShare">Share This</string> -->
<!--     <string name="en_btnOpenActivityAbout">About</string> -->
<!--     <string name="en_btnOpenActivityFeedback">Feedback</string> -->
    
    
    <!-- from Term Activity -->
    <string name="tv_add_term">Create Term</string>
    <string name="tv_edit_term">Edit Term</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_synchronize">Synchronize</string>
    <string name="ActionBtnAdd">Add New Term</string>
    <string name="ActionBtnSave">Save Term</string>
    <string name="ActionBtnSettings">Settings</string>
    <string name="etHintWord">Word</string>
    <string name="etHintMeaning">Meaning</string>
    <string name="etHintExample">Example</string>
    <string name="etHintComment">Comment (optional)</string>
    
    
     <!-- on ActivityTerms and ActivityDictionaries -->
    <string name="deleteConfirm">Confirm</string>
    <string name="deleteConfirmQuestion">Do you really want to delete</string>
    <string name="deleteConfirmPositive">Yes</string>
    <string name="deleteConfirmNegavite">No</string>
    <!--  only on ActivityDictionaries -->
   	<string name="deleteConfirmWarning"> \n\n(This will permanently delete all terms of this dictioanry!)</string>
   
	<!-- from Add Edit Word Activity -->
	<string name="toast_add_edit_term_activity_no_word">Write a word</string>
	
	<string name="toast_add_edit_example_activity_no_example">Enter a example</string>
	
    <!-- from Dictionary Activity -->
    <string name="tv_dictionary_activity_title">Dictionary</string>
    <string name="tv_dictionary_activity_legend">Enter the description:</string>
    <string name="btn_dictionary_activity_save">Save</string>
    <string name="btn_dictionary_activity_cancel">Cancel</string>
    <string name="btn_dictionary_activity_add_dictionary">New Dictioanry</string>
    <string name="btn_dictionary_activity_no_name">Enter a name for the dictionary</string>
    
    <string name="btnActionBar_create">New</string>
    <string name="btnActionBar_save">Save</string>
    <string name="btnActionBar_Cancel">Cancel</string>
    
    <string name="message_notification">What is the meaning of </string>
    
	<!-- from Display Term Activity -->
	<string name="tv_word_activity_display">Word</string>
	<string name="tv_meaning_activity_display">Meaning</string>
	<string name="btn_correct_activity_display">I knew it</string>
	<string name="btn_wrong_activity_display">I forgot it</string>
	<string name="toast_language_not_supported">The language of this dictionary is not supported yet</string>
	<string name="toast_silence">Phone in silence mode</string>
	
	<!-- from Signup Activity -->
	<string name="signup_activity_hint_name">Name</string>
	<string name="signup_activity_hint_password">Password</string>
	<string name="signup_activity_hint_password_repeat">Retype your password</string>
	<string name="signup_activity_hint_email">Email</string>
	<string name="signup_activity_btn_signup">Sign Up</string>
	
	<string name="toast_add_edit_meaning_activity_no_meaning">Enter a meaning</string>
    
    <!-- from Alarm Settings Activity -->
    <string name="notifications_enable_disable_title">Notifications</string>
    <string name="notifications_enabled">Enabled</string>
    <string name="notifications_disabled">Disabled</string>
    <string name="frequence_of_notifications">Frequence of Notifications</string>
    <string name="frequence_of_notifications_description">Interval between notifications</string>
    <string-array name="frequence_options_entries">
        <item>1 minute</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>4 hours</item>
        <item>5 hours</item>
        <item>6 hours</item>
        <item>7 hours</item>
        <item>8 hours</item>
        <item>9 hours</item>
        <item>10 hours</item>
        <item>11 hours</item>
        <item>12 hours</item>
        <item>13 hours</item>
        <item>14 hours</item>
        <item>15 hours</item>
        <item>16 hours</item>
        <item>17 hours</item>
        <item>18 hours</item>
        <item>19 hours</item>
        <item>20 hours</item>
        <item>21 hours</item>
        <item>22 hours</item>
        <item>23 hours</item>
        <item>24 hours</item>
    </string-array>
    <string-array name="frequence_options_entries_values">
        <item>1</item>
        <item>60</item>
        <item>120</item>
        <item>180</item>
        <item>240</item>
        <item>300</item>
        <item>360</item>
        <item>420</item>
        <item>480</item>
        <item>540</item>
        <item>600</item>
        <item>660</item>
        <item>720</item>
        <item>780</item>
        <item>840</item>
        <item>900</item>
        <item>960</item>
        <item>1020</item>
        <item>1080</item>
        <item>1140</item>
        <item>1200</item>
        <item>1260</item>
        <item>1320</item>
        <item>1380</item>
        <item>1440</item>
    </string-array>

    <string-array name="available_languages_descriptions">
        <item>English</item>
        <item>Portuguese</item>
        <item>French</item>
    </string-array>
    
    <string-array name="available_languages_value">
        <item>en</item>
        <item>pt</item>
        <item>fr</item>
    </string-array>
    
    <string-array name="empty_array">
    </string-array>
    
    <string name="dictionaries_to_be_questioned">Questioned Dictionaries</string>
    <string name="dictionaries_to_be_questioned_description">Select the dictionaries that will be questioned</string>
    
    <!-- from activity_add_edit_dictionary.xml -->
    <string name="dictionary_name">Name</string>
    <string name="dictionary_language">Language</string>
</resources>