<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <CheckBoxPreference
    	android:key="notification"
   		android:title="@string/notifications_enable_disable_title"
    	android:defaultValue="true" />
    
    <ListPreference
        android:title="@string/frequence_of_notifications"
        android:summary="@string/frequence_of_notifications_description"
        android:key="notificationFrequence"
        android:entries="@array/frequence_options_entries"
        android:entryValues="@array/frequence_options_entries_values" ></ListPreference>
    
    <MultiSelectListPreference
        android:title="@string/dictionaries_to_be_questioned"
        android:summary="@string/dictionaries_to_be_questioned_description"
        android:key="dictionaries_questioned"
        android:defaultValue="@array/empty_array" ></MultiSelectListPreference>    
    
    </PreferenceScreen>
